# rust-warp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  geoflux-implementation-plan.md  phase3-summary.md  phase4-summary.md  phase6-summary.md  phase7-summary.md  phase8-dask-hlg-summary.md  pyproject.toml  research-prompt-phase7-testing.md  rust-warp-implementation-plan.md  typos.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: warp_bench.rs
docs/: api-reference.md  architecture.md  development.md  performance.md  phase1-summary.md  proj4rs-differences.md
python/rust_warp/: __init__.py  _backend.py  _rust.pyi  cubed_graph.py  dask_graph.py  geobox.py  reproject.py  xarray_accessor.py
scripts/: diagnose_projection.py
src/: affine.rs  error.rs  lib.rs
src/chunk/: mod.rs  planner.rs
src/proj/: albers_equal_area.rs  approx.rs  common.rs  crs.rs  ellipsoid.rs  equirectangular.rs  lambert_conformal.rs  mercator.rs  mod.rs  pipeline.rs  sinusoidal.rs  stereographic.rs  transverse_mercator.rs
src/py/: mod.rs  plan.rs  reproject.rs  transform.rs
src/resample/: average.rs  bilinear.rs  cubic.rs  lanczos.rs  mod.rs  nearest.rs
src/warp/: engine.rs  mod.rs
tests/: conftest.py  test_aef_integration.py  test_benchmark.py  test_chunk.py  test_cross_backend.py  test_cubed.py  test_dask.py  test_dask_graph_bench.py  test_era5_integration.py  test_geobox_ops.py  test_projections.py  test_transform.py  test_warp.py  test_xarray.py
tests/test_correctness/: test_accuracy_diagnostic.py  test_affine_math.py  test_alpha_channel.py  test_antimeridian.py  test_dtype_coverage.py  test_edge_cases.py  test_globe_projections.py  test_kernel_isolation.py  test_nodata_advanced.py  test_nonsquare_pixels.py  test_overlap_roi.py  test_projection_accuracy.py  test_resampling_advanced.py  test_vs_gdal.py
tests/test_epoch_compat/: test_aef_workflow.py  test_geobox_compat.py
tests/test_integration/: test_large_scale.py  test_multi_zone.py
